syntax = "proto3";

package proto;

service SecretService{
    rpc Encrypt(SecretRequest) returns (SecretResponse){}
    rpc Decrypt(SecretRequest) returns (SecretResponse){}
}

message SecretRequest {
    string request = 1;
}

message SecretResponse {
    string response = 1;
}

